# sofos-code

./: .cargo-release-cheatsheet.md  .gitignore  .sofosrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  RELEASE.md  STRUCTURE.md  THIRD_PARTY_NOTICES  release.toml
.github/workflows/: mirror.yml  release.yml
docs/: DIFF_DISPLAY.md
examples/: async_tasks.rs  calculator.rs  config.toml  mcp_examples.md  mcp_quickstart.md
src/: cli.rs  clipboard.rs  config.rs  conversation.rs  diff.rs  error.rs  error_ext.rs  history.rs  main.rs  model_config.rs  prompt.rs  repl.rs  request_builder.rs  response_handler.rs  session_selector.rs  session_state.rs  syntax.rs  ui.rs
src/api/: anthropic.rs  client.rs  mod.rs  model_info.rs  morph.rs  openai.rs  truncate.rs  types.rs  utils.rs
src/api/anthropic/: client.rs  mod.rs  stream.rs  wire.rs
src/api/openai/: client.rs  mod.rs  stream.rs  wire.rs
src/commands/: builtin.rs  mod.rs
src/mcp/: client.rs  config.rs  manager.rs  mod.rs  protocol.rs
src/mcp/transport/: http.rs  mod.rs  stdio.rs
src/repl/: clipboard_edit_mode.rs  compaction.rs  conversation.rs  mod.rs  prompt.rs  request_builder.rs  response_handler.rs  sessions.rs  turn.rs
src/repl/conversation/: compaction.rs  lifecycle.rs  messages.rs  mod.rs  tokens.rs
src/repl/tui/: app.rs  event.rs  event_loop.rs  inline_terminal.rs  inline_tui.rs  input.rs  keymap.rs  mod.rs  output.rs  scrollback.rs  sgr.rs  slash_popup.rs  ui.rs  worker.rs
src/session/: history.rs  mod.rs  selector.rs  state.rs
src/session/history/: index.rs  instructions.rs  manager.rs  mod.rs  model.rs  preview.rs
src/tools/: bashexec.rs  child_env.rs  codesearch.rs  executor.rs  filesystem.rs  image.rs  mod.rs  morph_validate.rs  permissions.rs  plan.rs  resolve.rs  search.rs  test_support.rs  tests.rs  tool_handler.rs  tool_name.rs  types.rs  utils.rs
src/tools/bash/: executor.rs  mod.rs  output.rs  sandbox.rs  validate.rs
src/tools/bash/sandbox/: linux.rs  macos.rs  mod.rs
src/tools/bash/sandbox/windows/: acl.rs  cap.rs  mod.rs  proc_thread_attr.rs  process.rs  token.rs  winutil.rs
src/tools/permissions/: command_parse.rs  manager.rs  mod.rs  pattern.rs  scope.rs  settings.rs
src/ui/: cost.rs  diff.rs  markdown.rs  mod.rs  session_display.rs  syntax.rs
