[package]
name = "sofos"
version = "0.1.5"
edition = "2021"

authors = ["Alexander Alexandrov"]
description = "An interactive AI coding agent for your terminal"
license = "MIT"
repository = "https://github.com/alexylon/sofos-code"
documentation = "https://docs.rs/sofos"
keywords = ["cli", "ai", "llm", "coding-agent", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sofos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
colored = "3.0"
syntect = "5.2"
similar = "2.7"
crossterm = "0.29"
reedline = "0.44"

# Utilities
futures = "0.3"
chrono = "0.4"

# Logging (optional but helpful)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
