[package]
name = "sofos"
version = "0.1.16"
edition = "2021"

authors = ["Alexander Alexandrov"]
description = "An interactive AI coding agent for your terminal"
license = "MIT"
repository = "https://github.com/alexylon/sofos-code"
documentation = "https://docs.rs/sofos"
keywords = ["cli", "ai", "llm", "coding-agent", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sofos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
colored = "3"
syntect = "5"
# pulldown-cmark-mdcat v2.7 needs pulldown-cmark v0.12
pulldown-cmark = "0.12"
pulldown-cmark-mdcat = "2.7"
similar = "2"
crossterm = "0.29"
reedline = "0.44"
globset = "0.4"
rand = "0.9"
base64 = "0.22"

# Utilities
futures = "0.3"
chrono = "0.4"

# Logging (optional but helpful)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
