[package]
name = "sofos"
version = "0.3.5"
edition = "2021"

authors = ["Alexander Alexandrov"]
description = "An interactive AI coding agent for your terminal"
license = "Apache-2.0"
repository = "https://github.com/alexylon/sofos-code"
documentation = "https://docs.rs/sofos"
keywords = ["cli", "ai", "llm", "coding-agent", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sofos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "native-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"
colored = "3"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
pulldown-cmark = "0.13"
similar = "3"
crossterm = "0.29"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info", "scrolling-regions"] }
tui-textarea = { package = "tui-textarea-2", version = "0.11" }
ansi-to-tui = "8"
os_pipe = "1"
libc = "0.2"
globset = "0.4"
rand = "0.10"
base64 = "0.22"
arboard = "3"
png = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
unicode-width = "0.2"

# Utilities
futures = "0.3"
chrono = "0.4"

# Logging (optional but helpful)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
